--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,6 +6,9 @@
           = link_to "出席状況", root_path
           = link_to "ランキング", ranking_path
           = link_to "メンバーリスト", member_path
+        .center_elements
+          = link_to root_path do
+            = image_tag "logo.png"
         .right_elements
           = link_to "ログアウト", logout_path, method: :delete
           = link_to user_path(@current_user) do
@@ -13,6 +16,8 @@
             = user_image_tag(@current_user, '', 30, 30)
     - else
       = icon('fas', 'bars', id: 'menu_opener')
+      = link_to root_path, id: "logo" do
+        = image_tag "logo.png"
       = link_to user_path(@current_user) do
         = user_image_tag(@current_user, '', 30, 30)
       %nav#header_elements_sp
