--- a/app/assets/stylesheets/existences/edit.scss
+++ b/app/assets/stylesheets/existences/edit.scss
@@ -78,5 +78,79 @@
   }
 }
 @media all and (max-width: 768px){
-
+  #existence_edit_container{
+    width: 100%;
+    margin: 20px auto 40px;
+    h1{
+      font-size: 30px;
+      font-weight: bold;
+      text-align: center;
+      margin-bottom: 20px;
+      span{
+        display: block;
+        font-size: 16px;
+        font-weight: bold;
+      }
+    }
+    form{
+      @include shadow(4px, 10px, 3px, 0.5);
+      width: 85%;
+      background-color: #FFF;
+      border-radius: 10px;
+      padding: 20px 10px;
+      margin: 0 auto;
+      .error_notification{
+        width: 80%;
+        color: #FFF;
+        text-align: center;
+        background-color: #F00;
+        padding: 10px 0;
+        margin: auto;
+      }
+      .field{
+        margin: 20px;
+        label{
+          display: block;
+          color: #9E9E9E;
+          font-size: 14px;
+        }
+        input{
+          border: none;
+          border-bottom: 1px solid #9E9E9E;
+          border-radius: 0;
+          outline: none;
+          height: 45px;
+          width: 100%;
+          font-size: 16px;
+          margin: 0 0 8px 0;
+          padding: 0;
+          box-shadow: none;
+          box-sizing: content-box;
+          transition: box-shadow .3s, border .3s;
+        }
+        .error{
+          color: #F00;
+        }
+      }
+      .action{
+        text-align: center;
+        input{
+          width: 150px;
+          color: #FFF;
+          font-size: 16px;
+          font-weight: bold;
+          background-color: $second_color;
+          border-radius: 10px;
+          border-style: none;
+          cursor: pointer;
+          padding: 15px;
+        }
+      }
+      .back_btn{
+        display: block;
+        text-align: center;
+        margin-top: 20px;
+      }
+    }
+  }
 }
