--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -44,6 +44,18 @@
             margin: 0 10px;
           }
         }
+        .center_elements{
+          a{
+            img{
+              position: absolute;
+              top: 0;
+              left: 50%;
+              transform: translateX(-50%);
+              height: 60px;
+              width: auto;
+            }
+          }
+        }
         .right_elements{
           a{
             img{
@@ -74,6 +86,28 @@
 }
 @media all and (max-width: 768px){
   body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    #alert{
+      position: fixed;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      top: 0;
+      width: 100%;
+      height: 60px;
+      color: #FFF;
+      font-size: 13px;
+      font-weight: bold;
+      text-align: center;
+      background-color: $secondary_black_text;
+      z-index: 100;
+      &.fadeout{
+        animation : fadeOut 1s;
+        animation-fill-mode: both;
+      }
+    }
     #drawer_overlay, #card_overlay{
       position: fixed;
       top: 0;
@@ -101,6 +135,16 @@
         color: $primary_white_text;
         font-size: 30px;
         margin-left: 15px;
+      }
+      #logo{
+        img{
+          position: absolute;
+          top: 0;
+          left: 50%;
+          transform: translateX(-50%);
+          height: 60px;
+          width: auto;
+        }
       }
       img{
         border-radius: 50%;
@@ -172,6 +216,7 @@
       width: 100%;
       height: 60px;
       background-color: $first_color;
+      margin-top: auto;
       p{
         color: $primary_white_text;
         font-size: 10px;
