--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -49,7 +49,6 @@
       }
     }
     iframe{
-      @include shadow(4px, 10px, 3px, 0.5);
       margin: 50px auto;
     }
     table{
@@ -76,8 +75,93 @@
     .pagination{
       text-align: center;
       margin-top: 20px;
+      .disabled, .current{
+        color: $hint_black_text;
+      }
     }
   }
 }
 @media all and (max-width: 768px){
+  #user_show_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    margin: 20px 0 40px;
+    h1{
+      font-size: 30px;
+      font-weight: bold;
+      text-align: center;
+      margin-bottom: 20px;
+      span{
+        display: block;
+        font-size: 16px;
+        font-weight: bold;
+      }
+    }
+    .user_elements{
+      @include shadow(4px, 10px, 3px, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 85%;
+      background-color: #FFF;
+      border-radius: 10px;
+      padding: 20px 0;
+      margin: auto;
+      &_text{
+        margin-right: 10px;
+        p{
+          font-size: 13px;
+          border-bottom: 1px dotted $second_color;
+          margin: 10px 0;
+          span{
+            color: $secondary_black_text;
+            margin-right: 10px;
+          }
+        }
+      }
+      img{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        object-fit: cover;
+        font-family: 'object-fit: cover;';
+      }
+    }
+    iframe{
+      width: 85%;
+      margin: 10px auto;
+    }
+    table{
+      width: 85%;
+      display: table;
+      border-collapse: collapse;
+      border-spacing: 0;
+      margin: auto;
+      tbody, thead{
+        box-sizing: inherit;
+        tr{
+          border-bottom: 1px solid rgba(0,0,0,0.12);
+          td, th{
+            display: table-cell;
+            color: $secondary_black_text;
+            font-size: 13px;
+            text-align: left;
+            vertical-align: middle;
+            border-radius: 2px;
+            padding: 15px 5px;
+          }
+        }
+      }
+    }
+    .pagination{
+      font-size: 13px;
+      text-align: center;
+      margin-top: 20px;
+      .disabled, .current{
+        color: $hint_black_text;
+      }
+    }
+  }
 }
