--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
 %header
-  - if from_pc?
-    %nav#header_elements_pc
+  #header_elements_pc
+    %nav
       .center_elements
         = link_to root_path do
           = image_tag "logo.png"
@@ -14,14 +14,14 @@
           = link_to user_path(@current_user) do
             = user_name(@current_user)
             = user_image_tag(@current_user, '', 30, 30)
-  - else
+  #header_elements_sp
     = link_to root_path, id: "logo" do
       = image_tag "logo.png"
     - if @current_user.present?
       = icon('fas', 'bars', id: 'menu_opener')
-      = link_to user_path(@current_user) do
+      = link_to user_path(@current_user), class: "profile_image" do
         = user_image_tag(@current_user, '', 30, 30)
-      %nav#header_elements_sp
+      %nav#drawer_elements
         = icon('fas', 'times', id: "drawer_dalete")
         %h2 Menu
         %ul
