--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,7 +3,7 @@
 #user_show_container
   %h1
     %span #{user_name(@user)}の情報
-    Infomation of #{user_name(@user)}
+    Info #{user_name(@user)}
   .user_elements
     .user_elements_text
       %p
