--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,8 +34,9 @@
 
   %head
   %body
-    %div#drawer_overlay.open
-    %div#card_overlay.open
+    #modal_overlay.open
+    #drawer_overlay.open
+    #card_overlay.open
     = render "layouts/flash"
     = render "layouts/header"
     %main
