Fix: 総在室時間を分データで格納する/モーダル周りの処理の修正

--- a/app/assets/stylesheets/users/index.scss
+++ b/app/assets/stylesheets/users/index.scss
@@ -21,50 +21,6 @@
       flex-wrap: wrap;
       width: 870px;
       margin: 0 auto;
-      .leave_modal_container{
-        display: none;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 500px;
-        background-color: #FFF;
-        border-radius: 10px;
-        padding: 40px;
-        &.show{
-          display: flex;
-          z-index: 3;
-          animation: modal_open 0.3s ease 0s forwards;
-        }
-        p{
-          font-size: 30px;
-          font-weight: bold;
-          margin-bottom: 30px;
-          span{
-            color: #F00;
-            text-decoration: underline;
-            font-weight: bold;
-          }
-        }
-        .button_area{
-          display: flex;
-          justify-content: space-around;
-          .leave_button{
-            width: 100px;
-            color: #FFF;
-            font-size: 16px;
-            font-weight: bold;
-            background-color: $second_color;
-            border-radius: 10px;
-            border-style: none;
-            padding: 20px;
-            margin: 0 20px;
-          }
-        }
-      }
       .card_container{
         position: relative;
         width: 250px;
@@ -194,6 +150,50 @@
       margin: 50px 0;
     }
   }
+  #leave_modal{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    background-color: #FFF;
+    border-radius: 10px;
+    padding: 40px;
+    &.show{
+      display: flex;
+      z-index: 3;
+      animation: modal_open 0.3s ease 0s forwards;
+    }
+    p{
+      font-size: 30px;
+      font-weight: bold;
+      margin-bottom: 30px;
+      span{
+        color: #F00;
+        font-weight: bold;
+      }
+    }
+    .button_area{
+      display: flex;
+      justify-content: space-around;
+      .leave_button{
+        width: 100px;
+        color: #FFF;
+        text-align: center;
+        font-size: 16px;
+        font-weight: bold;
+        background-color: $second_color;
+        border-radius: 10px;
+        border-style: none;
+        padding: 20px;
+        margin: 0 20px;
+      }
+    }
+  }
 }
 @media all and (max-width: 768px){
   #index_container{
@@ -220,50 +220,6 @@
       background-color: #FFF;
       margin: 0 auto;
       padding: 10px;
-      .leave_modal_container{
-        display: none;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 90%;
-        background-color: #FFF;
-        border-radius: 10px;
-        padding: 20px 10px;
-        &.show{
-          display: flex;
-          z-index: 3;
-          animation: modal_open 0.3s ease 0s forwards;
-        }
-        p{
-          font-size: 16px;
-          font-weight: bold;
-          margin-bottom: 15px;
-          span{
-            color: #F00;
-            text-decoration: underline;
-            font-weight: bold;
-          }
-        }
-        .button_area{
-          display: flex;
-          justify-content: space-around;
-          .leave_button{
-            width: 100px;
-            color: #FFF;
-            font-size: 12px;
-            font-weight: bold;
-            background-color: $second_color;
-            border-radius: 10px;
-            border-style: none;
-            padding: 10px;
-            margin: 0 10px;
-          }
-        }
-      }
       .card_container{
         .card_elements{
           text-align: left;
@@ -367,6 +323,50 @@
       color: $secondary_black_text;
       text-align: center;
       margin: 50px 0;
+    }
+  }
+  #leave_modal{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    background-color: #FFF;
+    border-radius: 10px;
+    padding: 20px 10px;
+    &.show{
+      display: flex;
+      z-index: 3;
+      animation: modal_open 0.3s ease 0s forwards;
+    }
+    p{
+      font-size: 16px;
+      font-weight: bold;
+      margin-bottom: 15px;
+      span{
+        color: #F00;
+        font-weight: bold;
+      }
+    }
+    .button_area{
+      display: flex;
+      justify-content: space-around;
+      .leave_button{
+        width: 100px;
+        color: #FFF;
+        text-align: center;
+        font-size: 12px;
+        font-weight: bold;
+        background-color: $second_color;
+        border-radius: 10px;
+        border-style: none;
+        padding: 10px;
+        margin: 0 10px;
+      }
     }
   }
 }
