--- a/app/views/modals/_leave_modal.html.haml
+++ b/app/views/modals/_leave_modal.html.haml
@@ -1,8 +1,8 @@
-.leave_modal_container.modal{data: {index: index}}
+#leave_modal
   %p
     本当に
     %span 退席
     してもよろしいですか？
   .button_area
-    = link_to 'はい', user_leave_path(user), class: "leave_button"
-    = link_to 'いいえ', 'javascript:void(0)', class: "leave_button modal_close", data: {index: index}
+    = link_to 'はい', leave_path, class: "leave_button"
+    = link_to 'いいえ', 'javascript:void(0)', class: "leave_button modal_close"
