--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -7,7 +7,6 @@
   - if @users.present?
     %ul
       - @users.each_with_index do |user, index|
-        = render 'modals/leave_modal', user: user, index: index
         .card_container
           .card_elements
             %li.side.front
@@ -26,17 +25,17 @@
                   .user_card_info_elements_text
                     %p
                       総在室時間 :
-                      = user.total_time
+                      = user.total_time / 60
                       時間
                     %p
                       卒業まで :
-                      = state = (0 > (450 - user.total_time)) ? "Congratulations on your graduation!" : "#{450 - user.total_time} 時間"
+                      = state = (0 > (450 - user.total_time / 60)) ? "Congratulations on your graduation!" : "#{450 - user.total_time / 60} 時間"
                     - if @current_user == user
                       %p
                         プロフィール設定 :
                         = link_to "Edit", edit_user_path(user)
                   - if @current_user == user
-                    = link_to '退席する', 'javascript:void(0)', class: "show_more modal_open card_dalete", data: {index: index}
+                    = link_to '退席する', 'javascript:void(0)', class: "show_more modal_open card_dalete"
                   - else
                     = link_to user_path(user), class: "show_more" do
                       もっとみる
@@ -44,3 +43,5 @@
                 = icon('fas', 'times', class: "card_delete_button card_dalete", data: {index: index})
   - else
     %p.any_user_text 現在出席中のユーザーは存在しません。
+
+= render 'modals/leave_modal'
