--- a/app/assets/stylesheets/users/index.scss
+++ b/app/assets/stylesheets/users/index.scss
@@ -58,11 +58,24 @@
           .user_elements{
             width: 100%;
             height: 100px;
-            p{
+            .name{
+              width: 230px;
               color: $secondary_black_text;
-              font-size: 24px;
+              font-size: 22px;
               font-weight: bold;
               text-align: left;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              margin: 0 10px;
+            }
+            .message{
+              width: 230px;
+              height: 60px;
+              font-size: 16px;
+              text-align: left;
+              overflow: hidden;
+              text-overflow: ellipsis;
               margin: 0 10px;
             }
             a{
@@ -75,10 +88,14 @@
           height: 100%;
           background-color: #F7F7F7;
           h2{
+            width: 90%;
             font-size: 20px;
             font-weight: bold;
             text-align: center;
-            margin-top: 15px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin: 15px auto 0;
           }
           &_info{
             text-align: center;
@@ -240,8 +257,24 @@
             .user_elements{
               display: flex;
               flex-direction: column;
-              color: $secondary_black_text;
               font-weight: bold;
+              .name{
+                width: 200px;
+                color: $secondary_black_text;
+                font-weight: bold;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+              }
+              .message{
+                width: 200px;
+                height: 40px;
+                font-size: 13px;
+                text-align: left;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                margin: 5px 0;
+              }
             }
           }
           .user_card{
@@ -260,10 +293,14 @@
               animation: card_show 0.3s ease 0s forwards;
             }
             h2{
+              width: 90%;
               font-size: 20px;
               font-weight: bold;
               text-align: center;
-              margin-top: 20px;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              margin: 20px auto 0;
             }
             &_info{
               text-align: center;
