--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -8,10 +8,14 @@
     width: 100%;
     margin: 60px 0;
     h1{
+      width: 700px;
       font-size: 45px;
       font-weight: bold;
       text-align: center;
-      margin-bottom: 20px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      margin: 0 auto 20px;
       span{
         display: block;
         font-size: 20px;
@@ -89,10 +93,14 @@
     width: 100%;
     margin: 20px 0 40px;
     h1{
+      width: 85%;
       font-size: 27px;
       font-weight: bold;
       text-align: center;
-      margin-bottom: 20px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      margin: 0 auto 20px;
       span{
         display: block;
         font-size: 16px;
