Fix: サービスタイトルの修正

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title
-      = "#{yield(:title)} | 藤原研入退室システム"
+      = "#{yield(:title)} | Fujihalab System"
     = csrf_meta_tags
     = csp_meta_tag
     %meta{charset: "utf-8"}
