--- a/app/views/homes/privacy_policy.html.haml
+++ b/app/views/homes/privacy_policy.html.haml
@@ -5,7 +5,7 @@
     %span プライバシーポリシー
     Privacy Policy
   .agreement_text
-    %p 当サービス（Fujihalab-System）は、以下のとおり個人情報保護方針を定め、個人情報保護の仕組みを構築し、全開発者に個人情報保護の重要性の認識と取組みを徹底させることにより、個人情報の保護を推進致します。
+    %p 当サービス（Fujihalab System）は、以下のとおり個人情報保護方針を定め、個人情報保護の仕組みを構築し、全開発者に個人情報保護の重要性の認識と取組みを徹底させることにより、個人情報の保護を推進致します。
     .agreement_text_block
       %strong 個人情報の管理
       %p 当サービスは、学生様の個人情報を正確かつ最新の状態に保ち、個人情報への不正アクセス・紛失・破損・改ざん・漏洩などを防止するため、セキュリティシステムの維持・管理体制の整備・社員教育の徹底等の必要な措置を講じ、安全対策を実施し個人情報の厳重な管理を行ないます。
