Fix: ルーティング修正/プロフィールページのスタイル修正

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,8 +2,7 @@
 
 #user_show_container
   %h1
-    %span #{user_name(@user)}の情報
-    Info #{user_name(@user)}
+    #{user_name(@user)}の情報
   .user_elements
     .user_elements_text
       %p
