--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,8 +31,8 @@
 
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
-
-  %head
+    %link{rel: "manifest", href: "manifest.json"}
+    %meta{name: "apple-mobile-web-app-capable", content: "yes"}
   %body
     #modal_overlay.open
     #drawer_overlay.open
