Change: エラーページの見た目修正/postApi周り修正

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -247,6 +247,7 @@
         color: $primary_white_text;
         font-size: 10px;
         font-weight: bold;
+        text-align: center;
       }
     }
   }
