--- a/app/assets/stylesheets/homes/index.scss
+++ b/app/assets/stylesheets/homes/index.scss
@@ -351,7 +351,7 @@
                 font-size: 20px;
                 border-radius: 50%;
                 background-color: $third_color;
-                padding: 15px;
+                padding: 13px 15px;
               }
             }
           }
