Fix: UserShowページのタイトル修正

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,5 @@
-- provide(:title, "#{@user.name}の情報")
+- username = @user.nickname.present? ? @user.nickname : @user.name
+- provide(:title, "#{username}の情報")
 
 #user_show_container
   %h1
