--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,3 +42,4 @@
     %main
       = yield
     = render "layouts/footer"
+    %script{src: "https://embed.small.chat/TBYNT83U3GHHT0L3KL.js", async: true}
